# pyBaseSwap

./: LICENSE  README.md  pydoc-markdown.yml  pyproject.toml  setup.py  splitDocs.py
docs/: README.md
examples/: 01_getName.py  02_getPrice.py  03_editSettings.py  04_makeSwaps.py  05_getWalletAssets.py  06_limitOrder.py
pyBaseSwap/: IERC20.py  ISwapperContract.py  SwapperModul.py  W3Utils.py  __init__.py  core_abis.py  core_chains.py  core_settings.py
